CERT-0001 Add changes into table relation and change the update method for products
added swagger configuration

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -20,3 +20,9 @@ spring:
     idle-timeout: 30000
     max-lifetime: 1800000
     connection-timeout: 20000
+
+springdoc:
+  api-docs:
+    path: /v3/api-docs
+  swagger-ui:
+    path: /swagger-ui
